<resources>
    <string name="app_name">Ayam Goreng 5 Sambal System</string>

    <!-- GENERAL-->
    <string name="required">required*</string>

    <!-- HOME-->
    <string name="welcome">Welcome, </string>
    <string name="logout">Logout</string>

    <string name="foods">Foods</string>
    <string name="drinks">Drinks</string>
    <string name="supplies">Supplies</string>
    <string name="expense">Expense</string>

    <!--ADD FOODS-->
    <string name="addFood">Tambah Makanan Baru</string>
    <string name="nameFood">Nama Makanan</string>
    <string name="priceFood">Harga Jual</string>
    <string name="category">Pilih Kategori</string>
    <string name="nasi">Nasi</string>
    <string name="daging">Daging</string>
    <string name="ikan">Ikan</string>
    <string name="tambahan">Tambahan</string>

    <!--SUBMIT ORDER / DETAIL INFO ORDER -->
    <string name="nameCustomer">Nama Konsumen</string>
    <string name="orderType">Jenis Pesanan :</string>
    <string name="rdDineIn">Dine In</string>
    <string name="rdTakeAway">Take Away</string>
    <string name="consumenType">Jenis Konsumen:</string>
    <string name="umum">Umum</string>
    <string name="Ojol">Online/Ojol</string>
    <string name="karyawan">Karyawan</string>
    <string name="kerabat">Kerabat/Tetangga</string>
    <string name="notesOrder">Catatan Tambahan...</string>

    <!-- USER MODULE -->
    <string name="user_add">Tambah User Baru</string>
    <string name="name">Nama Lengkap</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="branch">Pilih Cabang</string>
    <string name="cibatok">Cibatok</string>
    <string name="cikampak">Cikampak (On Testing)</string>

    <!-- ORDER DETAIL MODULE -->
    <string name="orderDetailHeader">Detail Informasi Pesanan</string>
        <string name="orderDetailUniqeId">Kode Transaksi :</string>
        <string name="orderDetailDateTime">Waktu Pemesanan :</string>

        <!-- RECYCLERVIEW - ORDER PROCESS DETAIL ITEM -->
            <string name="harga_jual">Harga Jual :</string>
            <string name="qty">Jumlah Pesanan :</string>
            <string name="subtotal_pesanan">Total :</string>

            <string name="edit_price">Ubah Harga Jual</string>
            <string name="edit_qty">Ubah Jumlah Pesanan</string>
            <string name="delete_item">Hapus Item Ini</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="cashier_inprocess">List In Process</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="cashier_complete">List Complete</string>

    <string name="cashierHeader">Daftar Penjualan Hari ini</string>
    <string name="statusComplete">Pembayaran</string>
    <string name="statusCancel">Batalkan</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>